re #16 fixing weird two px whitespace between tabs and panes

--- a/code/media/com_debug/css/debug-default.css
+++ b/code/media/com_debug/css/debug-default.css
@@ -55,6 +55,8 @@
 #debug div.current {
     padding: 0 20px;
     background-color: #FFF;
+    /* Why is the negative margin needed to clear the 2px whitespace? */
+    margin-top: -2px;
 }
 #debug div.current dd {
     padding: 0;
